// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.00
     
  </h1>
</div>
`;

exports[`should render ExpensesSummary with one expense 2`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $37,982.37
     
  </h1>
</div>
`;
